# aries-news

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
design/mockups/: blend.html  dusk-spectrum.html  dusk.html  tide.html
docs/adr/: 0001-stack-and-async.md  0002-app-state-services.md
src/app/: __init__.py  dependencies.py  main.py
src/app/api/: __init__.py  insights.py  news.py
src/app/core/: __init__.py  config.py  db.py  enums.py  sentiment.py  url.py
src/app/migrations/: env.py
src/app/migrations/versions/: 0001_baseline.py
src/app/models/: __init__.py  article.py  insight.py
src/app/repositories/: insights.py
src/app/schemas/: __init__.py  article.py  insight.py
src/app/services/: __init__.py  insights.py  jobs.py  news.py  openai_client.py
src/app/static/css/: app.css
src/app/templates/: base.html  index.html  insights.html  search.html
src/app/templates/partials/: _analyze_form.html  _shimmer.html  _spectrum.html  _status_label.html  _summary.html  article.html  results_region.html
src/app/web/: __init__.py  routes.py  templating.py
tests/: conftest.py  test_config.py  test_e2e_analyze.py  test_e2e_smoke.py  test_insights_api.py  test_insights_repository.py  test_jobs.py  test_news_api.py  test_news_service.py  test_openai_client.py  test_sentiment.py  test_url.py  test_web_routes.py
