[project]
name = "aries-news"
version = "0.2.1"
description = "Search real-time news, generate AI summaries + sentiment, and browse the insights."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.55",
    "sse-starlette>=2.1",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pylint>=3.3",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.33",
    "hypothesis>=6.119",
    "anyio>=4.6",
    "playwright>=1.49",
    "pytest-playwright>=0.6",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ---------------------------------------------------------------------------
# Ruff — formatting + linting (includes google-convention docstring checks)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # flake8-bugbear
    "C4",                # comprehensions
    "SIM",               # flake8-simplify
    "ASYNC",             # async correctness
    "D",                 # pydocstyle (google convention below)
    "ANN",               # type annotations
    "RUF",
]
ignore = [
    "ANN401",            # allow typing.Any where deliberate
    "D104",              # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]      # tests need not be docstring/annotation strict
"src/app/migrations/**" = ["D", "ANN", "E501"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pyright — strict static typing
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "src/app/migrations"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# ---------------------------------------------------------------------------
# Pylint — extra design/complexity enforcement (lint, not formatting)
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.12"
ignore-paths = ["^src/app/migrations/.*$"]
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.basic]
# `SessionFactory` is a sessionmaker (CamelCase is the SQLAlchemy convention).
good-names = ["i", "j", "k", "ex", "Run", "_", "SessionFactory"]

[tool.pylint."messages control"]
# Ruff owns formatting/import/docstring-presence; let pylint focus on design smells.
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "wrong-import-order",
    "duplicate-code",
    # ORM models / declarative base / settings are data classes by design.
    "too-few-public-methods",
    # SQLAlchemy `func.*` (e.g. func.now()) is a known pylint false positive.
    "not-callable",
]

[tool.pylint.design]
max-args = 8

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
# One shared event loop for all tests + fixtures: the app's module-level async
# engine and JobQueue singleton bind to a loop, so per-test loops would tear
# down their connections on the wrong loop ("Event loop is closed").
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "e2e: end-to-end browser tests (Playwright); slower, excluded from the fast pre-commit subset",
    "db: tests requiring a running PostgreSQL; excluded from the fast pre-commit subset",
]

[tool.coverage.run]
branch = true
source = ["src/app"]
omit = ["src/app/migrations/*"]
